# Tines

./: .gitmodules  README.md
src/: CMakeLists.txt  FindLAPACKE.cmake  FindOpenBLAS.cmake  FindYAML.cmake
src/core/: CMakeLists.txt  Tines.cpp  Tines.hpp  Tines_Config.hpp.in  Tines_Interface.hpp  Tines_Internal.hpp  Tines_Progress.cpp  Tines_Progress.hpp  Tines_TestUtils.hpp
src/core/cmake/: TinesConfig.cmake.in  Tines_Config.hpp.in
src/core/cmake/modules/: FindCUDA.cmake  FindLAPACKE.cmake  FindSUNDIALS.cmake  FindYAML.cmake
src/core/linear-algebra/: Tines_ApplyPermutation.hpp  Tines_ApplyPivot.hpp  Tines_ApplyQ.hpp  Tines_ApplyQ_HostTPL.cpp  Tines_ArithTraits.hpp  Tines_CheckNanInf.hpp  Tines_ComputeConditionNumber.hpp  Tines_ComputeConditionNumber_HostTPL.cpp  Tines_ComputeSortingIndices.hpp  Tines_Copy.hpp  Tines_EigendecompositionToComplex.hpp  Tines_EigendecompositionValidateLeftEigenPairs.hpp  Tines_EigendecompositionValidateRightEigenPairs.hpp  Tines_Gemm.hpp  Tines_Gemm_Device.cpp  Tines_Gemm_Device.hpp  Tines_Gemm_HostTPL.cpp  Tines_Gemv.hpp  Tines_Gemv_HostTPL.cpp  Tines_Givens.hpp  Tines_Hessenberg.hpp  Tines_HessenbergFormQ.hpp  Tines_HessenbergFormQ_HostTPL.cpp  Tines_Hessenberg_Device.cpp  Tines_Hessenberg_Device.hpp  Tines_Hessenberg_HostTPL.cpp  Tines_InvertMatrix.hpp  Tines_InvertMatrix_HostTPL.cpp  Tines_NormL2.hpp  Tines_QR.hpp  Tines_QR_FormQ.hpp  Tines_QR_FormQ_HostTPL.cpp  Tines_QR_HostTPL.cpp  Tines_QR_WithColumnPivoting.hpp  Tines_QR_WithColumnPivoting_HostTPL.cpp  Tines_RightEigenvectorSchur.hpp  Tines_RightEigenvectorSchur_Device.cpp  Tines_RightEigenvectorSchur_Device.hpp  Tines_Scale.hpp  Tines_Schur.hpp  (+17 more)
src/core/linear-algebra/internal/: Tines_ApplyGivens_Internal.hpp  Tines_ApplyHouseholder_Internal.hpp  Tines_ApplyPermutation_Internal.hpp  Tines_ApplyPivot_Internal.hpp  Tines_ApplyQ_Internal.hpp  Tines_CheckNanInf_Internal.hpp  Tines_ComputeSortingIndices_Internal.hpp  Tines_Copy_Internal.hpp  Tines_Dot_Internal.hpp  Tines_EigendecompositionToComplex_Internal.hpp  Tines_FindAmax_Internal.hpp  Tines_Gemm_Internal.hpp  Tines_Gemv_Internal.hpp  Tines_Givens_Internal.hpp  Tines_HessenbergFormQ_Internal.hpp  Tines_Hessenberg_Internal.hpp  Tines_Householder_Internal.hpp  Tines_NormL2_Internal.hpp  Tines_PivotToPermutation_Internal.hpp  Tines_QR_FormQ_Internal.hpp  Tines_QR_Internal.hpp  Tines_QR_WithColumnPivoting_Internal.hpp  Tines_RightEigenvectorSchur_Internal.hpp  Tines_Scale_Internal.hpp  Tines_Schur_Internal.hpp  Tines_Set_Internal.hpp  Tines_ShiftedQuasiTrsvInternal.hpp  Tines_SolveEigenvaluesNonSymmetricProblem_Internal.hpp  Tines_SolveUTV_Internal.hpp  Tines_Trsm_Internal.hpp  Tines_Trsv_Internal.hpp  Tines_UTV_Internal.hpp
src/core/sacado/: KokkosExp_View_Fad.hpp  Kokkos_DynRankView_Fad.hpp  Kokkos_LayoutContiguous.hpp  Sacado.hpp  Sacado_DynamicArrayTraits.hpp  Sacado_config.h
src/core/time-integration/: Tines_NewtonSolver.hpp  Tines_NumericalJacobianCentralDifference.hpp  Tines_NumericalJacobianForwardDifference.hpp  Tines_NumericalJacobianRichardsonExtrapolation.hpp  Tines_ProblemTestODE.hpp  Tines_ProblemTestSacadoSimple.hpp  Tines_ProblemTestSimple.hpp  Tines_ProblemTestTrBDF2.hpp  Tines_TimeIntegratorCVODE.hpp  Tines_TimeIntegratorTrBDF2.hpp  Tines_TrBDF2.hpp
src/example/: CMakeLists.txt
src/example/linear-algebra/: CMakeLists.txt  Tines_ComputeConditionNumber.cpp  Tines_EigenvalueSchur.cpp  Tines_FileInterface.cpp  Tines_Gemm.cpp  Tines_GemmDevice.cpp  Tines_Gemv.cpp  Tines_Givens.cpp  Tines_Hessenberg.cpp  Tines_HessenbergDevice.cpp  Tines_InvertMatrix.cpp  Tines_MachineParameters.cpp  Tines_QR.cpp  Tines_QR_WithColumnPivoting.cpp  Tines_RightEigenvector.cpp  Tines_RightEigenvectorSchur.cpp  Tines_RightEigenvectorSchurDevice.cpp  Tines_Schur.cpp  Tines_SchurDevice.cpp  Tines_Schur_HostTPL.cpp  Tines_SolveEigenvaluesNonSymmetricProblem.cpp  Tines_SolveEigenvaluesNonSymmetricProblemDevice.cpp  Tines_SolveLinearSystem.cpp  Tines_SolveUTV.cpp  Tines_SolveUTV_Simple.cpp  Tines_UTV.cpp
src/example/sacado/: CMakeLists.txt  Makefile  Tines_ToySacado.cpp  Tines_ToySacadoHessian.cpp  Tines_ToySacadoRayleighQuotient.cpp  Tines_ToySacadoReducer.cpp  Tines_ToySacadoStdVector.cpp  Tines_View.cpp
src/example/time-integration/: CMakeLists.txt  Tines_AnalyticJacobian.cpp  Tines_NewtonSolver.cpp  Tines_NumericalJacobian.cpp  Tines_TimeIntegratorCVODE.cpp  Tines_TimeIntegratorTrBDF2.cpp  Tines_TrBDF2.cpp
src/markdown/: README.md  build.md  eigensolver.md  front.mdpp  intro.md  newton.md  numerical-jacobian.md  problem.md  sacado-jacobian.md  time-integrator-trbdf2.md
src/unit-test/: CMakeLists.txt  Tines_Test_Driver.cpp
